Fix modding link alignment

--- a/resources/assets/less/bem/beatmap-discussion-post.less
+++ b/resources/assets/less/bem/beatmap-discussion-post.less
@@ -301,7 +301,7 @@
 
   &__user-row {
     display: flex;
-    align-items: center;
+    align-items: baseline;
   }
 
   &__user-stripe {
